@@ -12,9 +12,6 @@ may have been fixed since this was written!
 70. Problem re-using easy handle after call to curl_multi_remove_handle
   http://curl.haxx.se/mail/lib-2009-07/0249.html
     
-69. debugging a crash in Curl_pgrsTime/checkPendPipeline?
-  http://curl.haxx.se/mail/lib-2009-08/0066.html
-
 68. "More questions about ares behavior".
   http://curl.haxx.se/mail/lib-2009-08/0012.html
 
